// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50%;
        height: 50%;
        z-index: 37;
        transform: translateX(100.00000000000003%) translateY(100.00000000000003%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":25.000000000000007,
      \\"f\\":25.000000000000007
    }",
    "points": Array [
      Object {
        "x": 25.000000000000007,
        "y": 25.000000000000007,
      },
      Object {
        "x": 50.00000000000001,
        "y": 25.000000000000007,
      },
      Object {
        "x": 37.50000000000001,
        "y": 50.00000000000001,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,25.000000000000007,25.000000000000007)",
    "translateX": 25.000000000000007,
    "translateY": 25.000000000000007,
    "zIndex": 37,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.71428571428572%;
        height: 35.71428571428572%;
        z-index: 25;
        transform: translateX(90.00000000000004%) translateY(90.00000000000004%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.5714285714285716,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.5714285714285716,
      \\"e\\":16.071428571428584,
      \\"f\\":16.071428571428584
    }",
    "points": Array [
      Object {
        "x": 16.071428571428584,
        "y": 16.071428571428584,
      },
      Object {
        "x": 33.928571428571445,
        "y": 16.071428571428584,
      },
      Object {
        "x": 33.928571428571445,
        "y": 33.928571428571445,
      },
      Object {
        "x": 16.071428571428584,
        "y": 33.928571428571445,
      },
    ],
    "rotate": -0,
    "scale": 3.5714285714285716,
    "svgTransform": "matrix(3.5714285714285716,0,0,3.5714285714285716,16.071428571428584,16.071428571428584)",
    "translateX": 16.071428571428584,
    "translateY": 16.071428571428584,
    "zIndex": 25,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.000000000000014%;
        height: 50.000000000000014%;
        z-index: 12;
        transform: translateX(2.8421709430403998e-14%) translateY(2.8421709430403998e-14%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":7.105427357601002e-15,
      \\"f\\":7.105427357601002e-15
    }",
    "points": Array [
      Object {
        "x": -1.7763568394002505e-15,
        "y": -1.7763568394002505e-15,
      },
      Object {
        "x": 25.000000000000007,
        "y": -1.7763568394002505e-15,
      },
      Object {
        "x": 12.499999999999998,
        "y": 25.000000000000007,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,7.105427357601002e-15,7.105427357601002e-15)",
    "translateX": 7.105427357601002e-15,
    "translateY": 7.105427357601002e-15,
    "zIndex": 12,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.000000000000014%;
        height: 50.000000000000014%;
        z-index: 37;
        transform: translateX(99.99999999999994%) translateY(99.99999999999994%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":24.999999999999993,
      \\"f\\":24.999999999999993
    }",
    "points": Array [
      Object {
        "x": 24.999999999999993,
        "y": 24.999999999999993,
      },
      Object {
        "x": 50,
        "y": 24.999999999999993,
      },
      Object {
        "x": 37.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,24.999999999999993,24.999999999999993)",
    "translateX": 24.999999999999993,
    "translateY": 24.999999999999993,
    "zIndex": 37,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.714285714285744%;
        height: 35.714285714285744%;
        z-index: 24;
        transform: translateX(89.99999999999983%) translateY(89.99999999999983%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.5714285714285716,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.5714285714285716,
      \\"e\\":16.071428571428555,
      \\"f\\":16.071428571428555
    }",
    "points": Array [
      Object {
        "x": 16.07142857142856,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 33.92857142857143,
      },
      Object {
        "x": 16.07142857142856,
        "y": 33.92857142857143,
      },
    ],
    "rotate": -0,
    "scale": 3.5714285714285716,
    "svgTransform": "matrix(3.5714285714285716,0,0,3.5714285714285716,16.071428571428555,16.071428571428555)",
    "translateX": 16.071428571428555,
    "translateY": 16.071428571428555,
    "zIndex": 24,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50%;
        height: 50%;
        z-index: 12;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 0,
      },
      Object {
        "x": 12.5,
        "y": 25,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 12,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        z-index: 250000000025;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 250000000025,
  },
]
`;

exports[`packAnimal it works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.57142857142857%;
        height: 28.57142857142856%;
        z-index: 7;
        transform: translateX(100%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":14.285714285714285,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 14.285714285714292,
        "y": 1.2688263138573214e-15,
      },
      Object {
        "x": 28.571428571428577,
        "y": 1.2688263138573214e-15,
      },
      Object {
        "x": 21.428571428571423,
        "y": 14.285714285714281,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,14.285714285714285,0)",
    "translateX": 14.285714285714285,
    "translateY": 0,
    "zIndex": 7,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 20.408163265306108%;
        height: 20.408163265306115%;
        z-index: 14;
        transform: translateX(230.0000000000001%) translateY(90.00000000000011%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.040816326530612,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.040816326530612,
      \\"e\\":23.469387755102034,
      \\"f\\":9.183673469387763
    }",
    "points": Array [
      Object {
        "x": 23.469387755102037,
        "y": 9.18367346938777,
      },
      Object {
        "x": 33.67346938775509,
        "y": 9.18367346938777,
      },
      Object {
        "x": 33.67346938775509,
        "y": 19.387755102040828,
      },
      Object {
        "x": 23.469387755102037,
        "y": 19.387755102040828,
      },
    ],
    "rotate": -0,
    "scale": 2.040816326530612,
    "svgTransform": "matrix(2.040816326530612,0,0,2.040816326530612,23.469387755102034,9.183673469387763)",
    "translateX": 23.469387755102034,
    "translateY": 9.183673469387763,
    "zIndex": 14,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.57142857142857%;
        height: 28.571428571428566%;
        z-index: 21;
        transform: translateX(100%) translateY(99.99999999999997%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":14.285714285714285,
      \\"f\\":14.285714285714278
    }",
    "points": Array [
      Object {
        "x": 14.285714285714292,
        "y": 14.285714285714278,
      },
      Object {
        "x": 28.571428571428577,
        "y": 14.285714285714278,
      },
      Object {
        "x": 21.428571428571423,
        "y": 28.57142857142856,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,14.285714285714285,14.285714285714278)",
    "translateX": 14.285714285714285,
    "translateY": 14.285714285714278,
    "zIndex": 21,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.571428571428577%;
        height: 28.571428571428513%;
        z-index: 28;
        transform: translateX(149.99999999999994%) translateY(150.00000000000026%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":21.428571428571423,
      \\"f\\":21.428571428571423
    }",
    "points": Array [
      Object {
        "x": 21.428571428571427,
        "y": 21.428571428571438,
      },
      Object {
        "x": 35.714285714285715,
        "y": 21.428571428571438,
      },
      Object {
        "x": 28.571428571428566,
        "y": 35.714285714285694,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,21.428571428571423,21.428571428571423)",
    "translateX": 21.428571428571423,
    "translateY": 21.428571428571423,
    "zIndex": 28,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 20.408163265306115%;
        height: 20.408163265306143%;
        z-index: 35;
        transform: translateX(159.99999999999997%) translateY(299.99999999999966%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.040816326530612,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.040816326530612,
      \\"e\\":16.326530612244888,
      \\"f\\":30.61224489795918
    }",
    "points": Array [
      Object {
        "x": 16.326530612244895,
        "y": 30.612244897959187,
      },
      Object {
        "x": 26.530612244897952,
        "y": 30.612244897959187,
      },
      Object {
        "x": 26.530612244897952,
        "y": 40.81632653061226,
      },
      Object {
        "x": 16.326530612244895,
        "y": 40.81632653061226,
      },
    ],
    "rotate": -0,
    "scale": 2.040816326530612,
    "svgTransform": "matrix(2.040816326530612,0,0,2.040816326530612,16.326530612244888,30.61224489795918)",
    "translateX": 16.326530612244888,
    "translateY": 30.61224489795918,
    "zIndex": 35,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.571428571428577%;
        height: 28.57142857142858%;
        z-index: 42;
        transform: translateX(149.99999999999994%) translateY(249.99999999999991%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":21.428571428571423,
      \\"f\\":35.714285714285715
    }",
    "points": Array [
      Object {
        "x": 21.428571428571427,
        "y": 35.71428571428571,
      },
      Object {
        "x": 35.714285714285715,
        "y": 35.71428571428571,
      },
      Object {
        "x": 28.571428571428566,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,21.428571428571423,35.714285714285715)",
    "translateX": 21.428571428571423,
    "translateY": 35.714285714285715,
    "zIndex": 42,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.66619358571262%;
        height: 8.666193585712612%;
        z-index: 12;
        transform: translateX(1026.252671115863%) translateY(231.3763449690075%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8666193585712612,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8666193585712612,
      \\"e\\":44.468521578723674,
      \\"f\\":10.025760983280207
    }",
    "points": Array [
      Object {
        "x": 44.46852157872367,
        "y": 10.025760983280207,
      },
      Object {
        "x": 48.80161837157998,
        "y": 10.025760983280207,
      },
      Object {
        "x": 46.63506997515183,
        "y": 14.358857776136514,
      },
    ],
    "rotate": -0,
    "scale": 0.8666193585712612,
    "svgTransform": "matrix(0.8666193585712612,0,0,0.8666193585712612,44.468521578723674,10.025760983280207)",
    "translateX": 44.468521578723674,
    "translateY": 10.025760983280207,
    "zIndex": 12,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 6.5334295015108665%;
        height: 6.533429501510881%;
        z-index: 29;
        transform: translateX(1430.5897152004904%) translateY(851.4583212602794%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.6533429501510868,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.6533429501510868,
      \\"e\\":46.73328524924457,
      \\"f\\":27.814714577144194
    }",
    "points": Array [
      Object {
        "x": 46.73328524924457,
        "y": 27.814714577144194,
      },
      Object {
        "x": 50,
        "y": 27.814714577144194,
      },
      Object {
        "x": 50,
        "y": 31.081429327899635,
      },
      Object {
        "x": 46.73328524924457,
        "y": 31.081429327899635,
      },
    ],
    "rotate": -0,
    "scale": 0.6533429501510868,
    "svgTransform": "matrix(0.6533429501510868,0,0,0.6533429501510868,46.73328524924457,27.814714577144194)",
    "translateX": 46.73328524924457,
    "translateY": 27.814714577144194,
    "zIndex": 29,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 7.088600298503186%;
        height: 7.088600298503181%;
        z-index: 38;
        transform: translateX(-2.0047476394180014e-13%) translateY(1027.8457617411634%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.7088600298503187,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.7088600298503187,
      \\"e\\":-7.105427357601002e-15,
      \\"f\\":36.4299388674682
    }",
    "points": Array [
      Object {
        "x": -7.105427357601002e-15,
        "y": 36.4299388674682,
      },
      Object {
        "x": 3.5443001492515864,
        "y": 36.4299388674682,
      },
      Object {
        "x": 1.7721500746257897,
        "y": 39.97423901671979,
      },
    ],
    "rotate": -0,
    "scale": 0.7088600298503187,
    "svgTransform": "matrix(0.7088600298503187,0,0,0.7088600298503187,-7.105427357601002e-15,36.4299388674682)",
    "translateX": -7.105427357601002e-15,
    "translateY": 36.4299388674682,
    "zIndex": 38,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 45.236440140645556%;
        height: 50.12114001187468%;
        z-index: 36;
        transform: translateX(120.3318955958642%) translateY(94.706580680579%) rotate(12.186610670760285deg)
      ",
    "matrix": "{
      \\"a\\":4.523644014064555,
      \\"b\\":0.9769399742458252,
      \\"c\\":-0.9769399742458252,
      \\"d\\":4.523644014064555,
      \\"e\\":27.216932960663605,
      \\"f\\":23.734008951686025
    }",
    "points": Array [
      Object {
        "x": 27.216932960663605,
        "y": 23.73400895168603,
      },
      Object {
        "x": 49.83515303098638,
        "y": 28.618708822915153,
      },
      Object {
        "x": 33.64134312459587,
        "y": 48.794578957623365,
      },
    ],
    "rotate": 12.186610670760285,
    "scale": 4.62793332701126,
    "svgTransform": "matrix(4.523644014064555,0.9769399742458252,-0.9769399742458252,4.523644014064555,27.216932960663605,23.734008951686025)",
    "translateX": 27.216932960663605,
    "translateY": 23.734008951686025,
    "zIndex": 36,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 41.804804158580914%;
        height: 41.80480415858091%;
        z-index: 25;
        transform: translateX(93.190387212678%) translateY(73.51431236018384%) rotate(18.410461219027624deg)
      ",
    "matrix": "{
      \\"a\\":3.136477233552152,
      \\"b\\":1.0440031823059328,
      \\"c\\":-1.0440031823059328,
      \\"d\\":3.136477233552152,
      \\"e\\":19.479029434441635,
      \\"f\\":15.366257155351146
    }",
    "points": Array [
      Object {
        "x": 19.47902943444164,
        "y": 15.366257155351148,
      },
      Object {
        "x": 35.161415602202425,
        "y": 20.586273066880818,
      },
      Object {
        "x": 29.941399690672743,
        "y": 36.2686592346416,
      },
      Object {
        "x": 14.259013522911967,
        "y": 31.048643323111932,
      },
    ],
    "rotate": 18.410461219027624,
    "scale": 3.3056666621509003,
    "svgTransform": "matrix(3.136477233552152,1.0440031823059328,-1.0440031823059328,3.136477233552152,19.479029434441635,15.366257155351146)",
    "translateX": 19.479029434441635,
    "translateY": 15.366257155351146,
    "zIndex": 25,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 45.80136487350555%;
        height: 49.11842922508829%;
        z-index: 13;
        transform: translateX(0.7198343082957984%) translateY(18.414617345496918%) rotate(-8.241725834086557deg)
      ",
    "matrix": "{
      \\"a\\":4.580136487350554,
      \\"b\\":-0.6634128703165465,
      \\"c\\":0.6634128703165465,
      \\"d\\":4.580136487350554,
      \\"e\\":0.16484696901361673,
      \\"f\\":4.522485393959368
    }",
    "points": Array [
      Object {
        "x": 0.16484696901361667,
        "y": 4.522485393959367,
      },
      Object {
        "x": 23.06552940576639,
        "y": 1.2054210423766354,
      },
      Object {
        "x": 14.932252538972737,
        "y": 25.76463565492078,
      },
    ],
    "rotate": -8.241725834086557,
    "scale": 4.62793332701126,
    "svgTransform": "matrix(4.580136487350554,-0.6634128703165465,0.6634128703165465,4.580136487350554,0.16484696901361673,4.522485393959368)",
    "translateX": 0.16484696901361673,
    "translateY": 4.522485393959368,
    "zIndex": 13,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.91666666666669%;
        height: 47.91666666666669%;
        z-index: 38;
        transform: translateX(108.69565217391293%) translateY(108.69565217391293%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.791666666666668,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.791666666666668,
      \\"e\\":26.041666666666654,
      \\"f\\":26.041666666666654
    }",
    "points": Array [
      Object {
        "x": 26.041666666666654,
        "y": 26.041666666666654,
      },
      Object {
        "x": 50,
        "y": 26.041666666666654,
      },
      Object {
        "x": 38.02083333333332,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 4.791666666666668,
    "svgTransform": "matrix(4.791666666666668,0,0,4.791666666666668,26.041666666666654,26.041666666666654)",
    "translateX": 26.041666666666654,
    "translateY": 26.041666666666654,
    "zIndex": 38,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.035714285714334%;
        height: 33.035714285714334%;
        z-index: 250000000025;
        transform: translateX(101.35135135135111%) translateY(101.35135135135111%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.3035714285714297,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.3035714285714297,
      \\"e\\":16.741071428571413,
      \\"f\\":16.741071428571413
    }",
    "points": Array [
      Object {
        "x": 16.741071428571416,
        "y": 16.741071428571416,
      },
      Object {
        "x": 33.258928571428584,
        "y": 16.741071428571416,
      },
      Object {
        "x": 33.258928571428584,
        "y": 33.258928571428584,
      },
      Object {
        "x": 16.741071428571416,
        "y": 33.258928571428584,
      },
    ],
    "rotate": -0,
    "scale": 3.3035714285714297,
    "svgTransform": "matrix(3.3035714285714297,0,0,3.3035714285714297,16.741071428571413,16.741071428571413)",
    "translateX": 16.741071428571413,
    "translateY": 16.741071428571413,
    "zIndex": 250000000025,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.916666666666686%;
        height: 47.916666666666686%;
        z-index: 11;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.791666666666668,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.791666666666668,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 23.958333333333343,
        "y": 0,
      },
      Object {
        "x": 11.979166666666671,
        "y": 23.958333333333343,
      },
    ],
    "rotate": -0,
    "scale": 4.791666666666668,
    "svgTransform": "matrix(4.791666666666668,0,0,4.791666666666668,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 11,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666671%;
        height: 11.666666666666671%;
        z-index: 30;
        transform: translateX(478.57142857142827%) translateY(478.57142857142827%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":27.916666666666664,
      \\"f\\":27.916666666666664
    }",
    "points": Array [
      Object {
        "x": 27.916666666666664,
        "y": 27.916666666666664,
      },
      Object {
        "x": 33.75,
        "y": 27.916666666666664,
      },
      Object {
        "x": 30.833333333333332,
        "y": 33.75,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,27.916666666666664,27.916666666666664)",
    "translateX": 27.916666666666664,
    "translateY": 27.916666666666664,
    "zIndex": 30,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.333333333333336%;
        height: 8.333333333333336%;
        z-index: 27;
        transform: translateX(619.9999999999998%) translateY(619.9999999999998%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8333333333333334,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8333333333333334,
      \\"e\\":25.833333333333332,
      \\"f\\":25.833333333333332
    }",
    "points": Array [
      Object {
        "x": 25.833333333333332,
        "y": 25.833333333333332,
      },
      Object {
        "x": 30,
        "y": 25.833333333333332,
      },
      Object {
        "x": 30,
        "y": 30,
      },
      Object {
        "x": 25.833333333333332,
        "y": 30,
      },
    ],
    "rotate": -0,
    "scale": 0.8333333333333334,
    "svgTransform": "matrix(0.8333333333333334,0,0,0.8333333333333334,25.833333333333332,25.833333333333332)",
    "translateX": 25.833333333333332,
    "translateY": 25.833333333333332,
    "zIndex": 27,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666664%;
        height: 11.666666666666664%;
        z-index: 250000000025;
        transform: translateX(378.57142857142867%) translateY(378.57142857142867%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":22.083333333333332,
      \\"f\\":22.083333333333332
    }",
    "points": Array [
      Object {
        "x": 22.083333333333332,
        "y": 22.083333333333332,
      },
      Object {
        "x": 27.916666666666664,
        "y": 22.083333333333332,
      },
      Object {
        "x": 25,
        "y": 27.916666666666664,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,22.083333333333332,22.083333333333332)",
    "translateX": 22.083333333333332,
    "translateY": 22.083333333333332,
    "zIndex": 250000000025,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.36842105263157%;
        height: 47.36842105263157%;
        z-index: 38;
        transform: translateX(111.11111111111111%) translateY(111.11111111111111%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.7368421052631575,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.7368421052631575,
      \\"e\\":26.315789473684205,
      \\"f\\":26.315789473684205
    }",
    "points": Array [
      Object {
        "x": 26.3157894736842,
        "y": 26.3157894736842,
      },
      Object {
        "x": 49.999999999999986,
        "y": 26.3157894736842,
      },
      Object {
        "x": 38.157894736842096,
        "y": 49.999999999999986,
      },
    ],
    "rotate": -0,
    "scale": 4.7368421052631575,
    "svgTransform": "matrix(4.7368421052631575,0,0,4.7368421052631575,26.315789473684205,26.315789473684205)",
    "translateX": 26.315789473684205,
    "translateY": 26.315789473684205,
    "zIndex": 38,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.83458646616544%;
        height: 33.83458646616544%;
        z-index: 250000000025;
        transform: translateX(97.77777777777759%) translateY(97.77777777777759%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.3834586466165413,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.3834586466165413,
      \\"e\\":16.541353383458627,
      \\"f\\":16.541353383458627
    }",
    "points": Array [
      Object {
        "x": 16.541353383458638,
        "y": 16.541353383458638,
      },
      Object {
        "x": 33.45864661654136,
        "y": 16.541353383458638,
      },
      Object {
        "x": 33.45864661654136,
        "y": 33.45864661654136,
      },
      Object {
        "x": 16.541353383458638,
        "y": 33.45864661654136,
      },
    ],
    "rotate": -0,
    "scale": 3.3834586466165413,
    "svgTransform": "matrix(3.3834586466165413,0,0,3.3834586466165413,16.541353383458627,16.541353383458627)",
    "translateX": 16.541353383458627,
    "translateY": 16.541353383458627,
    "zIndex": 250000000025,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.368421052631575%;
        height: 47.368421052631575%;
        z-index: 11;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.7368421052631575,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.7368421052631575,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 23.684210526315788,
        "y": 0,
      },
      Object {
        "x": 11.842105263157892,
        "y": 23.684210526315788,
      },
    ],
    "rotate": -0,
    "scale": 4.7368421052631575,
    "svgTransform": "matrix(4.7368421052631575,0,0,4.7368421052631575,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 11,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.000000000000014%;
        height: 50.000000000000014%;
        z-index: 37;
        transform: translateX(99.99999999999994%) translateY(99.99999999999994%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":24.999999999999993,
      \\"f\\":24.999999999999993
    }",
    "points": Array [
      Object {
        "x": 24.999999999999993,
        "y": 24.999999999999993,
      },
      Object {
        "x": 50,
        "y": 24.999999999999993,
      },
      Object {
        "x": 37.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,24.999999999999993,24.999999999999993)",
    "translateX": 24.999999999999993,
    "translateY": 24.999999999999993,
    "zIndex": 37,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.714285714285744%;
        height: 35.714285714285744%;
        z-index: 24;
        transform: translateX(89.99999999999983%) translateY(89.99999999999983%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.5714285714285716,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.5714285714285716,
      \\"e\\":16.071428571428555,
      \\"f\\":16.071428571428555
    }",
    "points": Array [
      Object {
        "x": 16.07142857142856,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 33.92857142857143,
      },
      Object {
        "x": 16.07142857142856,
        "y": 33.92857142857143,
      },
    ],
    "rotate": -0,
    "scale": 3.5714285714285716,
    "svgTransform": "matrix(3.5714285714285716,0,0,3.5714285714285716,16.071428571428555,16.071428571428555)",
    "translateX": 16.071428571428555,
    "translateY": 16.071428571428555,
    "zIndex": 24,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50%;
        height: 50%;
        z-index: 12;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 0,
      },
      Object {
        "x": 12.5,
        "y": 25,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 12,
  },
]
`;
